# MPC-Car

./: .gitignore  README.md  activate_acados.sh  activate_acados_example.sh  pyproject.toml  requirements.txt
scripts/: progress_mpc.py  test_mpc.py  test_pid.py  test_plot_geometry.py  test_pp.py  test_run.py
src/racing_sim/controllers/: pid.py  pure_pursuit.py
src/racing_sim/controllers/mpc/: acados_model.py  config.py  controller.py  max_progress_config.py  max_progress_controller.py  max_progress_ocp.py  ocp.py
src/racing_sim/model/: dynamics.py  inputs.py  params.py  state.py  tire_model.py
src/racing_sim/sim/: integrators.py
src/racing_sim/track/: circle.py  ellipse.py  geometry.py  straight.py  tracks.py
src/racing_sim/visualization/: animation.py
